Added page counter

--- a/server/src/templates/studentlist.html
+++ b/server/src/templates/studentlist.html
@@ -16,7 +16,8 @@
    		<div style="text-align:center;"></div>
    		<p>{{ student.firstName }} {{ student.lastName }}</p>
    		<p>Grade: {{ student.grade }}</p>
-   		<p>Teacher: {{ student.teacher }}</p>   		
+   		<p>Teacher: {{ student.teacher }}</p>  
+   		<p>Pages read: {{ student.pagesRead }}</p> 		
    </div>
    <br>
 	{% endfor %}
