--- a/server/src/templates/main.html
+++ b/server/src/templates/main.html
@@ -4,6 +4,8 @@
 		{% if user %}
    		 	<ul>
    		 	<li><a href="/student">My Students</a></li>
+			<li><a href="/addBook">Add Books</a></li>
+			<li><a href="/libary">Libary</a></li>
    		 	</ul>
     	{% else %}
     		You must login first.
