--- a/server/src/templates/booklist.html
+++ b/server/src/templates/booklist.html
@@ -9,6 +9,7 @@
       		ISBN:<input type="number" name="isbn"/><br>    
  	 		<input type="submit" value="Submit">
   	 	</form>
+		<p>{{ Returnsuccess }} </P>
   	</div>
     </div>
 {% endblock %}
