functional Global And User Library
Admin View now allows for books to be added to students, creation of
student is now matched to that the app, and a global libary form minus
the ability to upload files in the form itself

--- a/server/src/css/style.css
+++ b/server/src/css/style.css
@@ -95,6 +95,8 @@ li {
 #footer {
 	width: 100%;
 	margin-top: -2em;
+	position: absolute;
+	bottom: 0px;
 	/* footer is 2em high, 1 for text +.5+.5 of padding */
 	text-align: center;
 	border-top: 1pt solid;
