--- a/server/src/templates/booklist.html
+++ b/server/src/templates/booklist.html
@@ -2,9 +2,8 @@
 {% block body %}
 	<div class="displaybox">
 		<div class="displaybox">
-		Enter new student:<br>
-		<p>Add a book to a user libary<p>
-		<form method="post" action="/addbook/">
+		<p>Add a book to a user library<p>
+		<form method="post" action="/addBook/">
      		User:<input type="text" name="user"/><br>
       		ISBN:<input type="number" name="isbn"/><br>    
  	 		<input type="submit" value="Submit">
