--- a/server/src/css/style.css
+++ b/server/src/css/style.css
@@ -39,7 +39,7 @@ body {
 .content {
 	padding-bottom: 1em;
 	line-height: 1.5em;
-	text-align: center;
+	text-align: right;
 }
 
 #page {
@@ -57,17 +57,23 @@ body {
     font:20pt bold,"Vollkorn";
     color:#bbb
 }
-
+td{
+	padding-left:15px;
+	padding-right:15px;
+}
+td, tr {
+    border: 1px solid black;
+}
 .displaybox {
 	text-align: left;
-	display: inline-block;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 50px;
+	margin-right: 50px;
 	border: 2px solid;
-	border-color: #eee;
+	border-color: #73000A;
 	margin-bottom: 1em;
 	padding: 10px;
-	background-color: #fee;
+	background-color: White;
+	color: black;
 }
 
 li {
@@ -102,5 +108,6 @@ li {
 	border-top: 1pt solid;
 	padding-top: .5em;
 	padding-bottom: .5em;
-	background-color: #eee;
+	background-color: #73000A;
+	color: white;
 }
