--- a/server/src/templates/main.html
+++ b/server/src/templates/main.html
@@ -6,6 +6,7 @@
    		 	<ul>
    		 	<li><a href="/student">Your Students</a></li>
 			<li><a href="/addBook">Student Books</a></li>
+			<li><a href="/stat">Student Stats</a></li>
 			<li><a href="/libary">Global Library</a></li>
    		 	</ul>
     	{% else %}
