Fix opened issues
footer is now in proper place.
default books are created by the server on launch now. note this code
needs to be removed after the server is launched as it waste datastore
writes.
fixed a minor spelling issue

--- a/server/src/css/style.css
+++ b/server/src/css/style.css
@@ -10,8 +10,9 @@ h1,h2,h3 {
 	padding: 10px 0 10px 0;
 }
 
-body {
+html,body {
 	font-family: serif;
+	height: 100%;
 }
 
 #title {
@@ -43,8 +44,9 @@ body {
 }
 
 #page {
-	height: 100%;
-	min-height: 100%;
+	padding-bottom: 2em;
+	min-height:100%;
+	position: relative;
 }
 
 #drop_zone {
@@ -72,6 +74,7 @@ td, tr {
 	border-color: #73000A;
 	margin-bottom: 1em;
 	padding: 10px;
+	padding-bottom: 2em;
 	background-color: White;
 	color: black;
 }
@@ -102,7 +105,7 @@ li {
 	width: 100%;
 	margin-top: -2em;
 	position: absolute;
-	bottom: 0px;
+	bottom: 0;
 	/* footer is 2em high, 1 for text +.5+.5 of padding */
 	text-align: center;
 	border-top: 1pt solid;
