--- a/phonegap/www/css/main.css
+++ b/phonegap/www/css/main.css
@@ -111,16 +111,29 @@ body {
 }
 
 #prev {
-  left: 40px;
+  left: 0px;
 }
 
 #next {  
-  right: 40px;
+  right: 0px;
 }
 
-.arrow {
+.menu-button {
   position: absolute;
-  top: 50%;
+  right: 96%;
+    margin-top: -10px;
+  font-size: 64px;
+  color: #E2E2E2;
+  font-family: arial, sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 42%;
+  right: 96%;
+  left: -10%;
   margin-top: -32px;
   font-size: 128px;
   color: #E2E2E2;
@@ -129,12 +142,31 @@ body {
   cursor: pointer;
 }
 
-.arrow:hover {
+.left-arrow {
+  position: absolute;
+  top: 42%;
+  left:96%;
+  right: 0%;
+  margin-top: -32px;
+  font-size: 128px;
+  color: #E2E2E2;
+  font-family: arial, sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+.left-arrow:hover {
+  color: #777;
+}
+
+.right-arrow:hover {
   color: #777;
 }
  
-.arrow:active,
-.arrow.active {
+.left-arrow.active {
+  color: #000;
+}
+
+.right-arrow.active {
   color: #000;
 }
 
@@ -673,7 +705,13 @@ input:-moz-placeholder {
     right: 0;
   }
   
-  .arrow {
+  .left-arrow {
+    height: 100%;
+    top: 45px;
+    width: 10%;
+    text-indent: -10000px;
+  }
+    .right-arrow {
     height: 100%;
     top: 45px;
     width: 10%;
