Initial commit of template.

--- a/server/src/templates/main.html
+++ b/server/src/templates/main.html
@@ -2,7 +2,7 @@
 {% block body %}
 	<div class="displaybox">
 		{% if user %}
-		    <p>BETA Admin View </p>
+		    <p>BETA</p>
    		 	<ul>
    		 	<li><a href="/student">Your Students</a></li>
 			<li><a href="/addBook">Student Books</a></li>
