--- a/phonegap/platforms/ios/www/css/bookshelf.css
+++ b/phonegap/platforms/ios/www/css/bookshelf.css
@@ -6,7 +6,7 @@ margin:0;padding:0;
 min-height: 900px;
 background: #FAFAFA;
 margin: 0px 0px 0px 0px;
-padding: 10px;
+padding: 0px;
 color: #333;
 }
 .container_16 .grid_11 {
@@ -25,12 +25,7 @@ position: relative;
 margin-left: 10px;
 margin-right: 10px;
 }
-.roundedges {
 
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-}
 user agent stylesheetdiv {
 display: block;
 }
@@ -42,14 +37,14 @@ font-family: Helvetica, Arial,Liberation Sans,DejaVu Sans,sans-serif;
 line-height: 1.5;
 }
 .bookshelf-title {
-margin: 0px 0px 0px -10px;
+margin: -10px 0px 0px 0px;
 padding: 0px;
 height: 55px;
 width: 1024px;
 display: table;
 background: url('../img/booktitle2.jpg') top left repeat;
 color: white;
-font-size: 28px;
+font-size: 32px;
 font-style: bold;
 background-color: #889088;
 }
@@ -66,6 +61,7 @@ font-weight: bolder;
 text-shadow: 0px 2px 0px #E6C8A8;
 color: #7E5325 !important;
 padding-left: 5px;
+padding-top: 10px;
 }
 .bookshelf-more-link:link {
 color: white;
@@ -74,7 +70,7 @@ font-size: 12px;
 }
 .bookshelf-body {
 width: 1024px !important;
-margin: 0px 0px 0px -10px !important;
+margin: 0px 0px 0px 0px !important;
 background: url('../img/rack.jpg') top left repeat-y;
 background-position: 0px 12px;
 }
@@ -94,31 +90,4 @@ float: left;
 position: relative;
 margin-left: 10px;
 margin-right: 10px;
-}
-#cssmenu1{ height:37px; display:block; padding:0; margin: 0 auto;  border:1px solid; border-radius:5px; } 
-#cssmenu1 > ul {list-style:inside none; padding:0; margin:0;} 
-#cssmenu1 > ul > li {list-style:inside none; padding:0; margin:0; float:left; display:block; position:relative;} 
-#cssmenu1 > ul > li > a{ outline:none; display:block; position:relative; padding:12px 20px; font:bold 13px/100% Arial, Helvetica, sans-serif; text-align:center; text-decoration:none; text-shadow:1px 1px 0 rgba(0,0,0, 0.4); } 
-#cssmenu1 > ul > li:first-child > a{border-radius:5px 0 0 5px;} 
-#cssmenu1 > ul > li > a:after{ content:''; position:absolute; border-right:1px solid; top:-1px; bottom:-1px; right:-2px; z-index:99; } 
-#cssmenu1 ul li.has-sub:hover > a:after{top:0; bottom:0;} 
-#cssmenu1 > ul > li.has-sub > a:before{ content:''; position:absolute; top:18px; right:6px; border:5px solid transparent; border-top:5px solid #fff; } 
-#cssmenu1 > ul > li.has-sub:hover > a:before{top:19px;} 
-#cssmenu1 ul li.has-sub:hover > a{ background:#3f3f3f; border-color:#3f3f3f; padding-bottom:13px; padding-top:13px; top:-1px; z-index:999; } 
-#cssmenu1 ul li.has-sub:hover > ul, #cssmenu ul li.has-sub:hover > div{display:block;} 
-#cssmenu1 ul li.has-sub > a:hover{background:#3f3f3f; border-color:#3f3f3f;} 
-#cssmenu1 ul li > ul, #cssmenu ul li > div{ display:none; width:auto; position:absolute; top:38px; padding:10px 0; background:#3f3f3f; border-radius:0 0 5px 5px; z-index:999; } 
-#cssmenu1 ul li > ul{width:200px;} 
-#cssmenu1 ul li > ul li{display:block; list-style:inside none; padding:0; margin:0; position:relative;} 
-#cssmenu1 ul li > ul li a{ outline:none; display:block; position:relative; margin:0; padding:8px 20px; font:10pt Arial, Helvetica, sans-serif; color:#fff; text-decoration:none; text-shadow:1px 1px 0 rgba(0,0,0, 0.5); } 
-
-#cssmenu1, #cssmenu > ul > li > ul > li a:hover{ background:#ff9812; background:-moz-linear-gradient(top, #ff9812 0%, #e17310 100%); background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff9812), color-stop(100%,#e17310)); background:-webkit-linear-gradient(top, #ff9812 0%,#e17310 100%); background:-o-linear-gradient(top, #ff9812 0%,#e17310 100%); background:-ms-linear-gradient(top, #ff9812 0%,#e17310 100%); background:linear-gradient(top, #ff9812 0%,#e17310 100%); filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff9812', endColorstr='#e17310',GradientType=0); } 
-#cssmenu1{border-color:#b05a0d;} 
-#cssmenu1 > ul > li > a{border-right:1px solid #b05a0d; color:#fff;} 
-#cssmenu1 > ul > li > a:after{border-color:#ffa32b;} 
-#cssmenu1 > ul > li > a:hover{background:#e17310;} 
- 1px dotted #6db2d0;
-}
-#cssmenu1 .has-sub .has-sub ul li a:hover {
-  background: #095c80;
 }
